Integrated the following from //depot/zimbra/JUDASPRIEST/...: Change 546954 by psurana@psurana-mac on 2015/06/09 09:43:41
bug: 84629
Added logger statement. 
Coverted LC value in millis. 
log4.properties set log4j.logger.zimbra.session=DEBUG

tweak 
zmlocalconfig -e zimbra_active_waitset_timeout_minutes=2

restart mailboxd 

see 
2015-06-09 20:09:17,480 DEBUG [Timer-Zimbra] [] session - active waitset timeout = 120000 ms


tweak 
zmlocalconfig -e zimbra_active_waitset_timeout_minutes=1

restart mailboxd 


psurana:ZimbraServer psurana$ grep "active waitset timeout" /opt/zimbra/log/mailbox.log
2015-06-09 20:01:23,780 DEBUG [Timer-Zimbra] [] session - active waitset timeout = 60000 ms
2015-06-09 20:02:23,781 DEBUG [Timer-Zimbra] [] session - active waitset timeout = 60000 ms
2015-06-09 20:03:23,782 DEBUG [Timer-Zimbra] [] session - active waitset timeout = 60000 ms

https://bugzilla.zimbra.com/show_bug.cgi?id=84629

Copied from Perforce
 Change: 546985